--- a/UnitTestProject1/packages.config
+++ b/UnitTestProject1/packages.config
@@ -16,16 +16,16 @@
   <package id="SpecFlow.MsTest" version="3.1.97" targetFramework="net472" />
   <package id="SpecFlow.Tools.MsBuild.Generation" version="3.1.97" targetFramework="net472" />
   <package id="SpecRun.Runner" version="3.2.22" targetFramework="net472" />
-  <package id="System.IO" version="4.3.0" targetFramework="net472" />
+  <package id="System.IO" version="4.3.0" targetFramework="net472" requireReinstallation="true" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Reflection.Emit" version="4.3.0" targetFramework="net472" />
   <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="net472" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" requireReinstallation="true" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
-  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
-  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net472" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" />
-  <package id="Utf8Json" version="1.3.7" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net472" requireReinstallation="true" />
+  <package id="Utf8Json" version="1.3.7" targetFramework="net472" requireReinstallation="true" />
 </packages>
